# autosync-voice

./: .gitignore  README.md  TODO  __main__.py  config.toml  devices.txt  flake.nix  pyproject.toml
.github/workflows/: test.yml
autosync_voice/: __init__.py  app.py  config.py  devices.py  export.py  importer.py  improve.py  matchmake.py  processed_list.py  sync.py
tests/unit/: test_importer.py
